Add php extension mcrypt

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -3,6 +3,10 @@ MAINTAINER Lucas Vieira <newlucasfevi@gmail.com>
 
 RUN apt-get update
 
+# Install mcrypt
+RUN apt-get install -y libmcrypt-dev
+RUN docker-php-ext-install mcrypt
+
 # Install XSL
 RUN apt-get install -y libxslt-dev
 RUN docker-php-ext-install xsl
