Add php.ini development file

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,8 @@
 FROM php:7.0-fpm
 MAINTAINER Lucas Vieira <newlucasfevi@gmail.com>
 
+COPY ./php.ini /usr/local/etc/php/
+
 RUN apt-get update
 
 # Install opcache
