Create docker environment for 5.6-apache

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,4 @@
-FROM php:5.6-fpm
+FROM php:5.6-apache
 MAINTAINER Lucas Vieira <newlucasfevi@gmail.com>
 
 COPY ./php.ini /usr/local/etc/php/
-
-RUN apt-get update
