--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,3 +2,5 @@ FROM php:5.6-apache
 MAINTAINER Lucas Vieira <newlucasfevi@gmail.com>
 
 COPY ./php.ini /usr/local/etc/php/
+
+RUN usermod -u 1000 www-data
