Add composer install option on docker/start, which will use docker image lucasfevi/composer

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,8 @@
 FROM php:5.6-apache
 MAINTAINER Lucas Vieira <newlucasfevi@gmail.com>
 
+# Copy php.ini
 COPY ./php.ini /usr/local/etc/php/
 
+# Workaround to enable apache to write on folders
 RUN usermod -u 1000 www-data
