--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,5 @@
 FROM php:5.6-fpm
 MAINTAINER Lucas Vieira <newlucasfevi@gmail.com>
 
+# Copy php.ini
 COPY ./php.ini /usr/local/etc/php/
-
-RUN apt-get update
